@@ -3230,6 +3230,32 @@ tmcg_byte_t CallasDonnerhackeFinneyShawThayerRFC4880::PacketDecode
 
 // ===========================================================================
 
+bool CallasDonnerhackeFinneyShawThayerRFC4880::BinaryDocumentHashV3
+	(const std::string &filename, const tmcg_octets_t &trailer, 
+	 const tmcg_byte_t hashalgo, tmcg_octets_t &hash, tmcg_octets_t &left)
+{
+	tmcg_octets_t hash_input;
+
+	// All signatures are formed by producing a hash over the signature
+	// data, and then using the resulting hash in the signature algorithm.
+	// For binary document signatures (type 0x00), the document data is
+	// hashed directly.
+	// [...]
+	// Once the data body is hashed, then a trailer is hashed. A V3
+	// signature hashes five octets of the packet body, starting from the
+	// signature type field. This data is the signature type, followed by
+	// the four-octet signature time.
+	hash_input.insert(hash_input.end(), trailer.begin(), trailer.end());
+	// After all this has been hashed in a single hash context, the
+	// resulting hash field is used in the signature algorithm and placed
+	// at the end of the Signature packet.
+	if (!HashComputeFile(hashalgo, filename, hash_input, hash))
+		return false;
+	for (size_t i = 0; i < 2; i++)
+		left.push_back(hash[i]);
+	return true;
+}
+
 bool CallasDonnerhackeFinneyShawThayerRFC4880::BinaryDocumentHash
 	(const std::string &filename, const tmcg_octets_t &trailer, 
 	 const tmcg_byte_t hashalgo, tmcg_octets_t &hash, tmcg_octets_t &left)
@@ -3263,6 +3289,40 @@ bool CallasDonnerhackeFinneyShawThayerRFC4880::BinaryDocumentHash
 	for (size_t i = 0; i < 2; i++)
 		left.push_back(hash[i]);
 	return true;
+}
+
+void CallasDonnerhackeFinneyShawThayerRFC4880::CertificationHashV3
+	(const tmcg_octets_t &key, const std::string &uid, 
+	 const tmcg_octets_t &trailer, const tmcg_byte_t hashalgo,
+	 tmcg_octets_t &hash, tmcg_octets_t &left)
+{
+	tmcg_octets_t hash_input;
+
+	// When a signature is made over a key, the hash data starts with the
+	// octet 0x99, followed by a two-octet length of the key, and then body
+	// of the key packet. (Note that this is an old-style packet header for
+	// a key packet with two-octet length.)
+	hash_input.push_back(0x99);
+	hash_input.push_back(key.size() >> 8);
+	hash_input.push_back(key.size());
+	hash_input.insert(hash_input.end(), key.begin(), key.end());
+	// A certification signature (type 0x10 through 0x13) hashes the User
+	// ID being bound to the key into the hash context after the above
+	// data. A V3 certification hashes the contents of the User ID or
+	// attribute packet packet, without any header.
+	for (size_t i = 0; i < uid.length(); i++)
+		hash_input.push_back(uid[i]);
+	// Once the data body is hashed, then a trailer is hashed. A V3
+	// signature hashes five octets of the packet body, starting from the
+	// signature type field. This data is the signature type, followed by
+	// the four-octet signature time. [...]
+	hash_input.insert(hash_input.end(), trailer.begin(), trailer.end());
+	// After all this has been hashed in a single hash context, the
+	// resulting hash field is used in the signature algorithm and placed
+	// at the end of the Signature packet.
+	HashCompute(hashalgo, hash_input, hash);
+	for (size_t i = 0; i < 2; i++)
+		left.push_back(hash[i]);
 }
 
 void CallasDonnerhackeFinneyShawThayerRFC4880::CertificationHash
@@ -3309,6 +3369,41 @@ void CallasDonnerhackeFinneyShawThayerRFC4880::CertificationHash
 	// six octets).
 	hash_input.push_back(0x04);
 	PacketLengthEncode(trailer.size(), hash_input);
+	// After all this has been hashed in a single hash context, the
+	// resulting hash field is used in the signature algorithm and placed
+	// at the end of the Signature packet.
+	HashCompute(hashalgo, hash_input, hash);
+	for (size_t i = 0; i < 2; i++)
+		left.push_back(hash[i]);
+}
+
+void CallasDonnerhackeFinneyShawThayerRFC4880::SubkeyBindingHashV3
+	(const tmcg_octets_t &primary, const tmcg_octets_t &subkey,
+	 const tmcg_octets_t &trailer, const tmcg_byte_t hashalgo,
+	 tmcg_octets_t &hash, tmcg_octets_t &left)
+{
+	tmcg_octets_t hash_input;
+
+	// When a signature is made over a key, the hash data starts with the
+	// octet 0x99, followed by a two-octet length of the key, and then body
+	// of the key packet. (Note that this is an old-style packet header for
+	// a key packet with two-octet length.) A subkey binding signature
+	// (type 0x18) or primary key binding signature (type 0x19) then hashes
+	// the subkey using the same format as the main key (also using 0x99 as
+	// the first octet).
+	hash_input.push_back(0x99);
+	hash_input.push_back(primary.size() >> 8);
+	hash_input.push_back(primary.size());
+	hash_input.insert(hash_input.end(), primary.begin(), primary.end());
+	hash_input.push_back(0x99);
+	hash_input.push_back(subkey.size() >> 8);
+	hash_input.push_back(subkey.size());
+	hash_input.insert(hash_input.end(), subkey.begin(), subkey.end());
+	// Once the data body is hashed, then a trailer is hashed. A V3
+	// signature hashes five octets of the packet body, starting from the
+	// signature type field. This data is the signature type, followed by
+	// the four-octet signature time. [...]
+	hash_input.insert(hash_input.end(), trailer.begin(), trailer.end());
 	// After all this has been hashed in a single hash context, the
 	// resulting hash field is used in the signature algorithm and placed
 	// at the end of the Signature packet.
